2004-09-23  Pamplona Hackers <gnome-desarrollo@es.gnome.org>

	Fixes #61978

	* tools/evolution-addressbook-export.c (main): use more
	meaningful error message.

2004-09-23  Fazlu & Hannah <hannah_lins@yahoo.co.in>

	* tools/evolution-addressbook-export.c (main):
	Changed the string into proper grammar 'In normal mode, there
	should not need size option.' to 'In normal mode, there is no need
	for the size option.'

2004-09-23  JP Rosevear  <jpr@novell.com>
 
 	* conduit/address-conduit.c (ecard_from_remote_record): only set
 	the file as address to the company if no full name exists
 	(delete_record): don't bail out if the record simply isn't found
 
 	Fixes #59725
 	
 	* conduit/address-conduit.c (local_record_from_uid): remove
 	extraneous semicolon
 
2004-09-21  William Jon McCann  <mccann@jhu.edu>

	* gui/component/component-factory.c (factory): Quiet debug messages.

	* gui/widgets/e-addressbook-view.c (eab_view_new): Remove
	unnecessary label widget placeholder.  Make vertical scrollbar
	policy automatic.  Use gtk_paned_add2 instead of
	gtk_container_add.

	* gui/component/apps_evolution_addressbook.schemas.in.in: Add
	missing show_preview schema.  Add missing long descriptions.

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/e-contact-editor.c (show_help_cb):
	Point at the correct XML file for documentation

2004-09-13 Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/contact-editor/e-contact-editor.c
       (sensitize_address) : check for _LABEL
       type address fields also in supported fileds
       while sensitizing the address fields

2004-09-03  JP Rosevear  <jpr@novell.com>
 
 	Fixes #63191
 	
 	* gui/contact-list-editor/contact-list-editor.glade: set the title
 	properly
	
2004-09-08  Not Zed  <NotZed@Ximian.com>

	** See bug #64080.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	link addressbook to camel.

2004-09-04 Sivaiah Nallagatla <snallagatla@novell.com>
